# TestInfoTecs

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  Main.cpp
file_client/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: Lib.h
lib/src/: Lib.cpp  LibFile.cpp  LibSocket.cpp
socket_client/: CMakeLists.txt  Reader.cpp  Writer.cpp
